# events_aggregator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
migrations/: env.py
migrations/versions/: 3d29340ec99b_initial_migration.py  3e4a79fa15d3_changing_sync_metadata_model.py  4474e8a34eb4_outbox_add_retry_count.py  696f951a3582_changing_sync_metadata_model.py  9e5a02e84476_drop_existing_tables_types.py  a1783db4b365_initial_migration.py  a2478a380803_initial_migration.py  d58ffbc665fb_initial_migration.py
scripts/: run.sh
src/: config.py  main.py
src/api/: dependencies.py  exception_handlers.py  exceptions.py  sync_service.py
src/api/routes/: events.py  exceptions.py  health.py  metrics.py  sync.py  tickets.py
src/crud/: base.py  events.py  outbox.py  seats_cache.py  sync_events.py  sync_metadata.py  tickets.py
src/database/: database.py
src/middleware/: metrics_middleware.py
src/models/: event.py  outbox.py  place.py  seats_cache.py  sync_metadata.py  ticket.py
src/schemas/: event.py  outbox.py  place.py  sync_metadata.py  ticket.py
src/services/: event_service.py  outbox_service.py  sync_service.py  ticket_service.py
src/utils/: create_lock_key.py  datetime_converter.py  sync.py  sync_service.py
tests/integration/: conftest.py  test_events_provider.py
