[project]
name = "events-aggregator"
version = "0.1.0"
description = "Events Aggregator API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruff>=0.15.4",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.ruff]
line-length = 88
preview = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"